Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h1>
 
-<p><strong>Users of Greasemonkey:</strong> <a href="https://github.com/RePod/psdle/raw/master/psdle.user.js">Get the user script</a> then go to the download list.<br>
+<p><strong>Users of Greasemonkey:</strong> <a href="https://repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.<br>
 Compatibility with Greasemonkey variants is not guaranteed, yet.</p>
 
 <p><strong>Everyone else:</strong></p>
@@ -47,9 +47,12 @@ Compatibility with Greasemonkey variants is not guaranteed, yet.</p>
 <li>Navigate to the desired account's download page from the online store</li>
 <li>Ensure the displayed page is the first (top has latest purchase)</li>
 <li>Open the Web Console (Firefox: Ctrl+Shift+K) (Chrome: Ctrl+Shift+J)</li>
-<li>Input <strong>$.getScript("<a href="https://raw.githubusercontent.com/RePod/psdle/master/psdle.js%22">https://raw.githubusercontent.com/RePod/psdle/master/psdle.js"</a>);</strong> </li>
+<li>Input <strong>$.getScript("<a href="https://repod.github.io/psdle/psdle.js%22">https://repod.github.io/psdle/psdle.js"</a>);</strong> </li>
 <li>Execute (Enter) and let the magic happen</li>
-</ol><p>If you get an error involving strict MIME checking, run the URL through something like <a href="http://rawgit.com/">RawGit</a>.</p>
+</ol><p><strong>Bleeding edge users:</strong></p>
+
+<p>The repository files will always be the latest possible versions, excluding forks/branches/etc. Feel free to give them a try.
+If you get an error involving strict MIME checking, run the URL through something like <a href="http://rawgit.com/">RawGit</a>.</p>
 
 <h1>
 <a name="what-needs-to-be-done" class="anchor" href="#what-needs-to-be-done"><span class="octicon octicon-link"></span></a>What Needs To Be Done</h1>
