Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ If you get an error involving strict MIME checking, run the URL through somethin
 <li>Possibly make the parsing process more detailed?</li>
 <li>In-depth information gathering (i.e. if system filtering is vague such as PS1 games marked for PSP)</li>
 <li>Exporting options: database delimiters?</li>
-<li>Make it translatable</li>
+<li>
+<strong>Translations!</strong> Language code ("en-us") and JSON format required. See source or contact me.</li>
 </ul><h1>
 <a name="what-cannot-be-done" class="anchor" href="#what-cannot-be-done"><span class="octicon octicon-link"></span></a>What Cannot Be Done</h1>
 
