Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@ I put it on GitHub for a reason, feel free to view the <del>horribly effective</
 If and when I get pull requests I'll let them sizzle and look through them while allowing the "community" to as well.</p>
 
 <p>If authentication details were left around openly on the download list page I would take my concerns elsewhere.</p>
+
+<h1>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
+
+<p>MIT, have fun.</p>
+
+<p><strong>PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.</strong>
+<strong>Third-party content (icons, names) re-rendered by PSDLE is provided from the download list.</strong></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/RePod">RePod</a></p>
