Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>Improving everyone's favorite online download list, one loop at a time.</p>
 
-<p>Doubtful? Have some in-action screenshots: (outdated)<br><a href="http://i.imgur.com/hFIw450.png">PS4 games</a> Example: All Plus offerings.<br><a href="http://i.imgur.com/1Iz43kd.png">PS3 games, no unlocks or passes</a> Example: DS3 has an online pass, DDU has an unlock.<br><a href="http://i.imgur.com/WekNUVc.png">PS3+V games</a> Example: Plus offerings for PS3+V.<br><a href="http://i.imgur.com/ta3YOO5.png">Sorting</a> Example: Ordering alphabetically instead of date.</p>
+<p>Doubtful? <a href="http://imgur.com/a/m5Rxw">Check out the Imgur album for some screenshots!</a></p>
 
 <h1>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h1>
