Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@ This in turn allows it to offer different options (such as PS1/2 games) to filte
 <p>Enable deep search/use API on PSDLE startup.</p>
 
 <h3>
+<a name="how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters" class="anchor" href="#how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters"><span class="octicon octicon-link"></span></a>How can I exclude results that aren't touched by the system or tag filters?</h3>
+
+<p>In the search box make a regular expression to match what you want to exclude then attach /d as a mod.</p>
+
+<p>For instance, /Avatar/id will exclude every instance of "Avatar" instead of only showing them. (/i is case in-sensitive)</p>
+
+<p>If the box turns red when the search is executed, /d is working as it should.</p>
+
+<h3>
 <a name="why-is-this-so-horrible" class="anchor" href="#why-is-this-so-horrible"><span class="octicon octicon-link"></span></a>Why is this so horrible?</h3>
 
 <p>At the time of writing a concept version is available simply showing off what can be done.<br>
