Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -17,10 +19,7 @@
       <header>
         <h1>PSDLE</h1>
         <p>Improving everyone&#39;s favorite online download list, one loop at a time.</p>
-
         <p class="view"><a href="https://github.com/RePod/psdle">View the Project on GitHub <small>RePod/psdle</small></a></p>
-
-
         <ul>
           <li><a href="https://github.com/RePod/psdle/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/RePod/psdle/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -38,8 +37,7 @@
 <h1>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h1>
 
-<p><strong>Users of Greasemonkey:</strong> <a href="https://repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.<br>
-Compatibility with Greasemonkey variants is not guaranteed, yet.</p>
+<p><strong>Grease/Tamper/etcmonkey users:</strong> <a href="https://repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.    </p>
 
 <p><strong>Everyone else:</strong></p>
 
@@ -135,12 +133,12 @@ If and when I get pull requests I'll let them sizzle and look through them while
 <p><strong>PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.</strong>
 <strong>Third-party content (icons, names) re-rendered by PSDLE is provided from the download list.</strong></p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/RePod">RePod</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/RePod">RePod</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
