--- a/index.html
+++ b/index.html
@@ -1,38 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="PSDLE : Improving everyone&#39;s favorite online download list, one loop at a time.">
+    <title>PSDLE by RePod</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>PSDLE</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/RePod/psdle">View on GitHub</a>
-
-          <h1 id="project_title">PSDLE</h1>
-          <h2 id="project_tagline">Improving everyone&#39;s favorite online download list, one loop at a time.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/RePod/psdle/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/RePod/psdle/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <header>
+        <h1>PSDLE</h1>
+        <p>Improving everyone&#39;s favorite online download list, one loop at a time.</p>
+        <p class="view"><a href="https://github.com/RePod/psdle">View the Project on GitHub <small>RePod/psdle</small></a></p>
+        <ul>
+          <li><a href="https://github.com/RePod/psdle/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/RePod/psdle/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/RePod/psdle">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
-<a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><img src="../logo/4_psdle.png?raw=true" alt="psdle">
+<a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><img src="logo/4_psdle.png?raw=true" alt="psdle">
 </h1>
 
 <p>Improving everyone's favorite online download list, one loop at a time.</p>
@@ -139,16 +135,11 @@ If and when I get pull requests I'll let them sizzle and look through them while
 <strong>Third-party content (icons, names) re-rendered by PSDLE is provided from the download list.</strong></p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">PSDLE maintained by <a href="https://github.com/RePod">RePod</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/RePod">RePod</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
