--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ If you get an error involving strict MIME checking, run the URL through somethin
 <li>Improve appearance</li>
 <li>
 <strong>Translations!</strong> Language code ("en-us") and JSON format required. See source or contact me.</li>
+<li>Make it faster! How? How indeed.</li>
 </ul><h1>
 <a name="what-cannot-be-done" class="anchor" href="#what-cannot-be-done"><span class="octicon octicon-link"></span></a>What Cannot Be Done</h1>
 
@@ -67,6 +68,15 @@ If you get an error involving strict MIME checking, run the URL through somethin
 <li>Adding the "Download to X" button, can't keep events.</li>
 </ul><h1>
 <a name="potentially-asked-questions" class="anchor" href="#potentially-asked-questions"><span class="octicon octicon-link"></span></a>Potentially Asked Questions</h1>
+
+<h5>
+<a name="is-this-safe-or-a-ploy-to-phish-account-details" class="anchor" href="#is-this-safe-or-a-ploy-to-phish-account-details"><span class="octicon octicon-link"></span></a>Is this safe or a ploy to phish account details?</h5>
+
+<p><strong>Yes it is safe, no it is not for phishing account details.</strong><br>
+I put it on GitHub for a reason, feel free to view the <del>horribly effective</del> code yourself and decide.<br>
+If and when I get pull requests I'll let them sizzle and look through them while allowing the "community" to as well.</p>
+
+<p>If authentication details were left around openly on the download list page I would take my concerns elsewhere.</p>
 
 <h5>
 <a name="why-does-it-take-so-long-to-parse" class="anchor" href="#why-does-it-take-so-long-to-parse"><span class="octicon octicon-link"></span></a>Why does it take so long to parse?</h5>
@@ -97,14 +107,14 @@ This in turn allows it to offer different options (such as PS1/2 games) to filte
 
 <p>In the search box make a regular expression to match what you want to exclude then attach /d as a mod.</p>
 
-<p>For instance, /Avatar/id will exclude every instance of "Avatar" instead of only showing them. (/i is case in-sensitive)</p>
+<p>For instance, /Avatar/id will exclude every instance of "Avatar" instead of only showing them. (/i is case-insensitive)</p>
 
 <p>If the box turns red when the search is executed, /d is working as it should.</p>
 
 <h5>
 <a name="why-is-this-so-horrible" class="anchor" href="#why-is-this-so-horrible"><span class="octicon octicon-link"></span></a>Why is this so horrible?</h5>
 
-<p>At the time of writing a concept version is available simply showing off what can be done.<br>
+<p>Functionally, PSDLE is complete. If you have suggestions make them known!<br>
 Feel free to fork and submit pull requests.</p>
 
 <h5>
@@ -118,13 +128,15 @@ Feel free to fork and submit pull requests.</p>
 <p>Probably, as long as it allows local Javascript execution.</p>
 
 <h5>
-<a name="is-this-safe-or-a-ploy-to-phish-account-details" class="anchor" href="#is-this-safe-or-a-ploy-to-phish-account-details"><span class="octicon octicon-link"></span></a>Is this safe or a ploy to phish account details?</h5>
+<a name="how-do-i-contribute" class="anchor" href="#how-do-i-contribute"><span class="octicon octicon-link"></span></a>How do I contribute?</h5>
 
-<p><strong>Yes it is safe, no it is not for phishing account details.</strong><br>
-I put it on GitHub for a reason, feel free to view the <del>horribly effective</del> code yourself and decide.<br>
-If and when I get pull requests I'll let them sizzle and look through them while allowing the "community" to as well.</p>
+<p>Unfortunately due to the single-file nature of PSDLE (due to browser restrictions) merging forks will be impossible, if not very difficult by only merging one fork at a time and having others sync to master.</p>
 
-<p>If authentication details were left around openly on the download list page I would take my concerns elsewhere.</p>
+<p>Remote JSON is out of the question (original intent for translations) due to cross-domain policies and *monkey variants run the script in an anonymous function/"sandbox" (preventing external interactions) for security, which I do not plan on bypassing.</p>
+
+<p>If there's one main category of what PSDLE needs contributions for: translations. I would like to see PSDLE offer at least every language the store offers (and possibly more!).</p>
+
+<p>If this doesn't sound like the way it should be done feel free to rewrite it, maybe it'll be better for everyone.</p>
 
 <h1>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
