--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 
 <p>Improving everyone's favorite online download list, one loop at a time.</p>
 
-<p>Doubtful? <a href="http://imgur.com/a/m5Rxw">Check out the Imgur album for some screenshots!</a></p>
+<p>Doubtful? <a href="//imgur.com/a/m5Rxw">Check out the Imgur album for some screenshots!</a></p>
 
 <h1>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h1>
 
-<p><strong>Grease/Tamper/etcmonkey users:</strong> <a href="https://repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.    </p>
+<p><strong>Grease/Tamper/etcmonkey users:</strong> <a href="//repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.    </p>
+
+<p><strong>Bookmarklet:</strong> <a href="//repod.github.io/psdle/bookmarklet.html">Get it here!</a></p>
 
 <p><strong>Everyone else:</strong></p>
 
@@ -51,13 +53,13 @@
 </ol><p><strong>Bleeding edge users:</strong></p>
 
 <p>The repository files will always be the latest possible versions, excluding forks/branches/etc. Feel free to give them a try.
-If you get an error involving strict MIME checking, run the URL through something like <a href="http://rawgit.com/">RawGit</a>.</p>
+If you get an error involving strict MIME checking, run the URL through something like <a href="//rawgit.com/">RawGit</a>.</p>
 
 <h1>
 <a name="what-needs-to-be-done" class="anchor" href="#what-needs-to-be-done"><span class="octicon octicon-link"></span></a>What Needs To Be Done</h1>
 
 <ul>
-<li>Improve appearance</li>
+<li>Improve appearance.</li>
 <li>
 <strong>Translations!</strong> Language code ("en-us") and JSON format required. See source or contact me.</li>
 <li>Make it faster! How? How indeed.</li>
