--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -1,9 +1,9 @@
 <div style='text-align:center;'>
 	<br />
-	<a href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' title='Run PSDLE' style='font-weight:bold;text-decoration:none;border-radius:13px;background-color:#2185F4;color:#FFF;padding:1px 15px;margin:5px auto;'>Run PSDLE</a><br />
+	<a href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' title='Bookmark this!' style='font-size:xx-large;font-weight:bold;text-decoration:none;border-radius:9001px;background-color:#2185F4;color:#FFF;padding:1px 15px;margin:5px auto;'>Run PSDLE</a><br /><a href='//wikipedia.org/wiki/Bookmarklet' style='display:inline-block;font-weight:bold;text-decoration:none;border-radius:13px;background-color:#2185F4;color:#FFF;padding:1px 15px;margin:5px auto;'>What's a bookmarklet?</a><br />
 	<br />
 	Bookmark the link, drag to bookmarks bar, etc. then select it when viewing the download list.<br />
 	Good for those not wanting to install browser plugins/extensions or store the file locally.<br /><br />
 	<small>Thank GitHub for disallowing bookmarklets in READMEs.<br/>
-	If this is not the case please inform me.</small>
+	If this is not the case please inform me.</small><br />
 </div>
