Bookmarklet - Going mobile
It's like going ghost.

--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -8,7 +8,7 @@
 		margin:5px auto;
 		display:inline-block;
 	}
-	a:hover {
+	.button:hover {
 		background-color:#11457F;
 	}
 </style>
@@ -19,7 +19,8 @@
 	<a class="button" href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' title='Bookmark this!' style='font-size:xx-large;'>Run PSDLE</a><br /><a class="button" href='//wikipedia.org/wiki/Bookmarklet'>What's a bookmarklet?</a><br />
 	<br />
 	Bookmark the link, drag to bookmarks bar, etc. then select it when viewing the download list.<br />
-	Good for those not wanting to install browser plugins/extensions or store the file locally.<br /><br />
+	Good for those not wanting or unable (mobile) to use plugins/extensions or store the file locally.<br />
+	<a href='//www.reddit.com/r/vita/comments/2fmsqc/ckbceq2'>iOS users read this.</a> Android users chime in.<br /><br />
 	<small>Thank GitHub for disallowing bookmarklets in READMEs.<br/>
 	If this is not the case please inform me.</small><br />
 	<br />
