Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p><strong>Grease/Tamper/etcmonkey users:</strong> <a href="//repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.    </p>
 
-<p><strong>Bookmarklet:</strong> <a href="//repod.github.io/psdle/bookmarklet.html">Get it here!</a></p>
+<p><strong>Bookmarklet:</strong> <a href="//repod.github.io/psdle/bookmarklet.html">Get it here!</a> (Works on iOS, possibly Android.)</p>
 
 <p><strong>Everyone else:</strong></p>
 
