Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@ If and when I get pull requests I'll let them sizzle and look through them while
 <h5>
 <a name="what-difference-does-using-the-apis-make" class="anchor" href="#what-difference-does-using-the-apis-make"><span class="octicon octicon-link"></span></a>What difference does using the APIs make?</h5>
 
-<p>The <strong>Game API</strong> (deep search) accesses individual game information to enhance results (detecting PS1/2 games, demos, etc.).<br>
-The <strong>Entitlements API</strong> accesses the user's entitlement (purchases) information to determine PS+ titles.</p>
+<p>The <strong>Game API</strong> (deep search) accesses individual game information to enhance results (detecting PS1/2 games, demos, etc.).</p>
 
-<p>All API usage is optional, usage is to enhance the list but required.</p>
+<p>The <strong>Entitlements API</strong> accesses the user's entitlement (purchases) information to determine PS+ titles.</p>
+
+<p>All API usage is optional, they're used only to enhance the experience </p>
 
 <p>End-users are to be held responsible for problems that arise from using the API.<br>
 API usage is currently early in its development so not everything may be detected properly.</p>
