--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -18,7 +18,7 @@
 	<hr style='max-width:300px;'/><br />
 	<a class="button" href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' title='Bookmark this!' style='font-size:xx-large;'>Run PSDLE</a><br /><a class="button" href='//wikipedia.org/wiki/Bookmarklet'>What's a bookmarklet?</a><br />
 	<br />
-	Bookmark the link, drag to bookmarks bar, etc. then select it when viewing the download list.<br />
+	Bookmark the "Run PSDLE" link, drag it to bookmarks bar, etc. then select it when viewing the download list.<br />
 	Good for those not wanting or unable (mobile) to use plugins/extensions or store the file locally.<br />
 	<a href='//www.reddit.com/r/vita/comments/2fmsqc/psdle_userscript_fixing_horrible_download_list_on/ckbceq2'>iOS users read this.</a> Android users chime in.<br /><br />
 	<small>Thank GitHub for disallowing bookmarklets in READMEs.<br/>
