--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><img src="logo/4_psdle.png?raw=true" alt="psdle">
 </h1>
 
-<p>Improving everyone's favorite online download list, one loop at a time.</p>
+<p>Improving everyone's favorite online download list, one loop at a time.<br><strong>Downloading/saving files other than the userscript is not required!</strong></p>
 
 <p>Doubtful? <a href="//imgur.com/a/m5Rxw">Check out the Imgur album for some screenshots!</a> - <a href="//imgur.com/a/46K6L">PS+ Support!</a></p>
 
@@ -48,7 +48,7 @@
 <li>Navigate to the desired account's download page from the online store</li>
 <li>Ensure the displayed page is the first (top has latest purchase)</li>
 <li>Open the Web Console (Firefox: Ctrl+Shift+K) (Chrome: Ctrl+Shift+J)</li>
-<li>Input <strong>$.getScript("<a href="https://repod.github.io/psdle/psdle.js%22">https://repod.github.io/psdle/psdle.js"</a>);</strong> </li>
+<li>Input <strong>$.getScript("<a href="https://repod.github.io/psdle/psdle.js">https://repod.github.io/psdle/psdle.js</a>");</strong> </li>
 <li>Execute (Enter) and let the magic happen</li>
 </ol><p><strong>Bleeding edge users:</strong></p>
 
@@ -64,6 +64,7 @@ If you get an error involving strict MIME checking, run the URL through somethin
 <strong>Translations!</strong> Language code ("en-us") and JSON format required. See source or contact me.</li>
 <li>Make it faster! How? How indeed.</li>
 <li>Iron out problems with APIs.</li>
+<li>Internal Download Queue support.</li>
 </ul><h1>
 <a name="what-cannot-be-done" class="anchor" href="#what-cannot-be-done"><span class="octicon octicon-link"></span></a>What Cannot Be Done</h1>
 
@@ -89,6 +90,11 @@ If and when I get pull requests I'll let them sizzle and look through them while
 <p>Report any issues <a href="//github.com/RePod/psdle/issues/3">here</a>.</p>
 
 <h5>
+<a name="download-queue-support-when" class="anchor" href="#download-queue-support-when"><span class="octicon octicon-link"></span></a>Download Queue support when?</h5>
+
+<p>Soon, there is research to be done!</p>
+
+<h5>
 <a name="what-difference-does-using-the-apis-make" class="anchor" href="#what-difference-does-using-the-apis-make"><span class="octicon octicon-link"></span></a>What difference does using the APIs make?</h5>
 
 <p>The <strong>Game API</strong> (deep search) accesses individual game information to enhance results (detecting PS1/2 games, demos, etc.).</p>
@@ -104,6 +110,13 @@ API usage is currently early in its development so not everything may be detecte
 <a name="why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3" class="anchor" href="#why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3"><span class="octicon octicon-link"></span></a>Why are PS1 classics/etc showing as PSP and PS2 classics as PS3?</h5>
 
 <p>Enable deep search/use API on PSDLE startup.</p>
+
+<h5>
+<a name="why-is-ps4-content-not-correctly-identified-games-as-unknown-etc" class="anchor" href="#why-is-ps4-content-not-correctly-identified-games-as-unknown-etc"><span class="octicon octicon-link"></span></a>Why is PS4 content not correctly identified? (Games as unknown, etc.)</h5>
+
+<p>A <strong>non-PS4 item</strong> (PS3/P/Vita game, demo, application, avatar, etc) is required to be on the download list, as well as using the <strong>Game API</strong> (deep search).</p>
+
+<p>There was going to be an explanation behind this but nobody would care anyway.</p>
 
 <h5>
 <a name="how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters" class="anchor" href="#how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters"><span class="octicon octicon-link"></span></a>How can I exclude results that aren't touched by the system or tag filters?</h5>
@@ -142,13 +155,7 @@ Feel free to fork and submit pull requests.</p>
 <h5>
 <a name="how-do-i-contribute" class="anchor" href="#how-do-i-contribute"><span class="octicon octicon-link"></span></a>How do I contribute?</h5>
 
-<p>Unfortunately due to the single-file nature of PSDLE (due to browser restrictions) merging forks will be impossible, if not very difficult by only merging one fork at a time and having others sync to master.</p>
-
-<p>Remote JSON is out of the question (original intent for translations) due to cross-domain policies and *monkey variants run the script in an anonymous function/"sandbox" (preventing external interactions) for security, which I do not plan on bypassing.</p>
-
-<p>If there's one main category of what PSDLE needs contributions for: translations. I would like to see PSDLE offer at least every language the store offers (and possibly more!).</p>
-
-<p>If this doesn't sound like the way it should be done feel free to rewrite it, maybe it'll be better for everyone.</p>
+<p>Translations, let me have them! See source for format.</p>
 
 <h1>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
