--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
       </header>
       <section>
         <h1>
-<a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><img src="logo/4_psdle.png?raw=true" alt="psdle">
+<a id="" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a><img src="logo/4_psdle.png?raw=true" alt="psdle">
 </h1>
 
-<p>Improving everyone's favorite online download list, one loop at a time.<br><strong>Downloading/saving files other than the userscript is not required!</strong></p>
+<p>Improving everyone's favorite online download list, one loop at a time.<br>
+<strong>Downloading/saving files other than the userscript is not required!</strong></p>
 
 <p>Doubtful? <a href="//imgur.com/a/m5Rxw">Check out the Imgur album for some screenshots!</a> - <a href="//imgur.com/a/46K6L">PS+ Support!</a></p>
 
 <h1>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h1>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h1>
 
 <p><strong>Grease/Tamper/etcmonkey users:</strong> <a href="//repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.    </p>
 
@@ -50,31 +51,38 @@
 <li>Open the Web Console (Firefox: Ctrl+Shift+K) (Chrome: Ctrl+Shift+J)</li>
 <li>Input <strong>$.getScript("<a href="https://repod.github.io/psdle/psdle.js">https://repod.github.io/psdle/psdle.js</a>");</strong> </li>
 <li>Execute (Enter) and let the magic happen</li>
-</ol><p><strong>Bleeding edge users:</strong></p>
+</ol>
+
+<p><strong>Bleeding edge users:</strong></p>
 
 <p>The repository files will always be the latest possible versions, excluding forks/branches/etc. Feel free to give them a try.
 If you get an error involving strict MIME checking, run the URL through something like <a href="//rawgit.com/">RawGit</a>.</p>
 
 <h1>
-<a name="what-needs-to-be-done" class="anchor" href="#what-needs-to-be-done"><span class="octicon octicon-link"></span></a>What Needs To Be Done</h1>
+<a id="what-needs-to-be-done" class="anchor" href="#what-needs-to-be-done" aria-hidden="true"><span class="octicon octicon-link"></span></a>What Needs To Be Done</h1>
 
 <ul>
 <li>Improve appearance.</li>
 <li>
 <strong>Translations!</strong> Language code ("en-us") and JSON format required. See source or contact me.</li>
-<li>Make it faster! How? How indeed.</li>
-<li>Iron out problems with APIs.</li>
-<li>Internal Download Queue support.</li>
-</ul><h1>
-<a name="what-cannot-be-done" class="anchor" href="#what-cannot-be-done"><span class="octicon octicon-link"></span></a>What Cannot Be Done</h1>
+<li>Make it faster! How? How indeed. (Always in progress)</li>
+<li>Iron out problems with APIs. (Various degress of progress)</li>
+<li>Internal Download Queue support. (In-progress)</li>
+<li>Custom-make the gh-pages branch page to remove useless links (downloading the zip).</li>
+</ul>
+
+<h1>
+<a id="what-cannot-be-done" class="anchor" href="#what-cannot-be-done" aria-hidden="true"><span class="octicon octicon-link"></span></a>What Cannot Be Done</h1>
 
 <ul>
 <li>Adding the "Download to X" button, can't keep events.</li>
-</ul><h1>
-<a name="potentially-asked-questions" class="anchor" href="#potentially-asked-questions"><span class="octicon octicon-link"></span></a>Potentially Asked Questions</h1>
+</ul>
+
+<h1>
+<a id="potentially-asked-questions" class="anchor" href="#potentially-asked-questions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Potentially Asked Questions</h1>
 
 <h5>
-<a name="is-this-safe-or-a-ploy-to-phish-account-details" class="anchor" href="#is-this-safe-or-a-ploy-to-phish-account-details"><span class="octicon octicon-link"></span></a>Is this safe or a ploy to phish account details?</h5>
+<a id="is-this-safe-or-a-ploy-to-phish-account-details" class="anchor" href="#is-this-safe-or-a-ploy-to-phish-account-details" aria-hidden="true"><span class="octicon octicon-link"></span></a>Is this safe or a ploy to phish account details?</h5>
 
 <p><strong>Yes it is safe, no it is not for phishing account details.</strong><br>
 I put it on GitHub for a reason, feel free to view the <del>horribly effective</del> code yourself and decide.<br>
@@ -83,19 +91,19 @@ If and when I get pull requests I'll let them sizzle and look through them while
 <p>If authentication details were left around openly on the download list page I would take my concerns elsewhere.</p>
 
 <h5>
-<a name="does-this-support-ps-titles" class="anchor" href="#does-this-support-ps-titles"><span class="octicon octicon-link"></span></a>Does this support PS+ titles?</h5>
+<a id="does-this-support-ps-titles" class="anchor" href="#does-this-support-ps-titles" aria-hidden="true"><span class="octicon octicon-link"></span></a>Does this support PS+ titles?</h5>
 
 <p>Yes, or tries to, listing them as normal as well as distinguishing them from other entries with a yellow background.</p>
 
 <p>Report any issues <a href="//github.com/RePod/psdle/issues/3">here</a>.</p>
 
 <h5>
-<a name="download-queue-support-when" class="anchor" href="#download-queue-support-when"><span class="octicon octicon-link"></span></a>Download Queue support when?</h5>
+<a id="download-queue-support-when" class="anchor" href="#download-queue-support-when" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download Queue support when?</h5>
 
-<p>Soon, there is research to be done!</p>
+<p>Initial support is available from the versions on the PSDLE repository, go test it out!</p>
 
 <h5>
-<a name="what-difference-does-using-the-apis-make" class="anchor" href="#what-difference-does-using-the-apis-make"><span class="octicon octicon-link"></span></a>What difference does using the APIs make?</h5>
+<a id="what-difference-does-using-the-apis-make" class="anchor" href="#what-difference-does-using-the-apis-make" aria-hidden="true"><span class="octicon octicon-link"></span></a>What difference does using the APIs make?</h5>
 
 <p>The <strong>Game API</strong> (deep search) accesses individual game information to enhance results (detecting PS1/2 games, demos, etc.).</p>
 
@@ -107,19 +115,19 @@ If and when I get pull requests I'll let them sizzle and look through them while
 API usage is currently early in its development so not everything may be detected properly.</p>
 
 <h5>
-<a name="why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3" class="anchor" href="#why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3"><span class="octicon octicon-link"></span></a>Why are PS1 classics/etc showing as PSP and PS2 classics as PS3?</h5>
+<a id="why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3" class="anchor" href="#why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why are PS1 classics/etc showing as PSP and PS2 classics as PS3?</h5>
 
 <p>Enable deep search/use API on PSDLE startup.</p>
 
 <h5>
-<a name="why-is-ps4-content-not-correctly-identified-games-as-unknown-etc" class="anchor" href="#why-is-ps4-content-not-correctly-identified-games-as-unknown-etc"><span class="octicon octicon-link"></span></a>Why is PS4 content not correctly identified? (Games as unknown, etc.)</h5>
+<a id="why-is-ps4-content-not-correctly-identified-games-as-unknown-etc" class="anchor" href="#why-is-ps4-content-not-correctly-identified-games-as-unknown-etc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is PS4 content not correctly identified? (Games as unknown, etc.)</h5>
 
 <p>A <strong>non-PS4 item</strong> (PS3/P/Vita game, demo, application, avatar, etc) is required to be on the download list, as well as using the <strong>Game API</strong> (deep search).</p>
 
 <p>There was going to be an explanation behind this but nobody would care anyway.</p>
 
 <h5>
-<a name="how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters" class="anchor" href="#how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters"><span class="octicon octicon-link"></span></a>How can I exclude results that aren't touched by the system or tag filters?</h5>
+<a id="how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters" class="anchor" href="#how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can I exclude results that aren't touched by the system or tag filters?</h5>
 
 <p>In the search box make a regular expression to match what you want to exclude then attach /d as a mod.</p>
 
@@ -128,7 +136,7 @@ API usage is currently early in its development so not everything may be detecte
 <p>If the box turns red when the search is executed, /d is working as it should.</p>
 
 <h5>
-<a name="why-does-it-take-so-long-to-parse" class="anchor" href="#why-does-it-take-so-long-to-parse"><span class="octicon octicon-link"></span></a>Why does it take so long to parse?</h5>
+<a id="why-does-it-take-so-long-to-parse" class="anchor" href="#why-does-it-take-so-long-to-parse" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why does it take so long to parse?</h5>
 
 <p>PSDLE uses a crude method to detect page changes which takes a while, but is definitely faster than it was before. After all pages are parsed it then starts checking the APIs (if enabled) to get more information which also takes time from getting the result to storing the information where it needs to go.</p>
 
@@ -137,28 +145,28 @@ API usage is currently early in its development so not everything may be detecte
 <p>This may change in the future.</p>
 
 <h5>
-<a name="why-is-this-so-horrible" class="anchor" href="#why-is-this-so-horrible"><span class="octicon octicon-link"></span></a>Why is this so horrible?</h5>
+<a id="why-is-this-so-horrible" class="anchor" href="#why-is-this-so-horrible" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is this so horrible?</h5>
 
 <p>Functionally, PSDLE is complete. If you have suggestions make them known!<br>
 Feel free to fork and submit pull requests.</p>
 
 <h5>
-<a name="why-is-this-so-good" class="anchor" href="#why-is-this-so-good"><span class="octicon octicon-link"></span></a>Why is this so good?</h5>
+<a id="why-is-this-so-good" class="anchor" href="#why-is-this-so-good" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is this so good?</h5>
 
 <p>I ask myself that every time I wake up.</p>
 
 <h5>
-<a name="does-this-work-in-any-browsermy-toasters-web-browser" class="anchor" href="#does-this-work-in-any-browsermy-toasters-web-browser"><span class="octicon octicon-link"></span></a>Does this work in any browser/my toaster's web browser?</h5>
+<a id="does-this-work-in-any-browsermy-toasters-web-browser" class="anchor" href="#does-this-work-in-any-browsermy-toasters-web-browser" aria-hidden="true"><span class="octicon octicon-link"></span></a>Does this work in any browser/my toaster's web browser?</h5>
 
 <p>Probably, as long as it allows local Javascript execution.</p>
 
 <h5>
-<a name="how-do-i-contribute" class="anchor" href="#how-do-i-contribute"><span class="octicon octicon-link"></span></a>How do I contribute?</h5>
+<a id="how-do-i-contribute" class="anchor" href="#how-do-i-contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>How do I contribute?</h5>
 
 <p>Translations, let me have them! See source for format.</p>
 
 <h1>
-<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h1>
 
 <p>MIT, have fun.</p>
 
