Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,15 +67,8 @@ If you get an error involving strict MIME checking, run the URL through somethin
 <strong>Translations!</strong> Language code ("en-us") and JSON format required. See source or contact me.</li>
 <li>Make it faster! How? How indeed. (Always in progress)</li>
 <li>Iron out problems with APIs. (Various degress of progress)</li>
-<li>Internal Download Queue support. (In-progress)</li>
+<li>Improve Download Queue.</li>
 <li>Custom-make the gh-pages branch page to remove useless links (downloading the zip).</li>
-</ul>
-
-<h1>
-<a id="what-cannot-be-done" class="anchor" href="#what-cannot-be-done" aria-hidden="true"><span class="octicon octicon-link"></span></a>What Cannot Be Done</h1>
-
-<ul>
-<li>Adding the "Download to X" button, can't keep events.</li>
 </ul>
 
 <h1>
@@ -98,9 +91,13 @@ If and when I get pull requests I'll let them sizzle and look through them while
 <p>Report any issues <a href="//github.com/RePod/psdle/issues/3">here</a>.</p>
 
 <h5>
-<a id="download-queue-support-when" class="anchor" href="#download-queue-support-when" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download Queue support when?</h5>
+<a id="how-does-the-download-queue-work" class="anchor" href="#how-does-the-download-queue-work" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does the Download Queue work?</h5>
 
-<p>Initial support is available from the versions on the PSDLE repository, go test it out!</p>
+<p>At the time of writing, to add items simply click them on the list to select a system (or all).</p>
+
+<p>To view and remove items from the Download Queue click the "Queue" button in the top-right.</p>
+
+<p>Note adding/remove items may not reflect immediately, this is a work in progress.</p>
 
 <h5>
 <a id="what-difference-does-using-the-apis-make" class="anchor" href="#what-difference-does-using-the-apis-make" aria-hidden="true"><span class="octicon octicon-link"></span></a>What difference does using the APIs make?</h5>
