--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
 <p>Doubtful? <a href="//imgur.com/a/m5Rxw">Check out the Imgur album for some screenshots!</a> - <a href="//imgur.com/a/46K6L">PS+ Support!</a></p>
 
 <h1>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h1>
+
+<ul>
+<li>One convenient list of all your content!</li>
+<li>View, sort, and filter your download list as you desire!</li>
+<li>
+<strong>PS+ support:</strong> easily see what is and isn't tied to your subscription.</li>
+<li>
+<strong>Download queue support:</strong> easily send items where you want.</li>
+<li>
+<strong>Export your list</strong> in a database/spreadsheet format (CSV) to use as you like!</li>
+<li>Lightweight, portable, consistent: computer or mobile, always the same experience.</li>
+<li>
+<strong>Mobile!</strong> Even on-the-go, don't settle for a featureless download list! (<a href="#" title="Your mileage may vary.">YMMV</a>)</li>
+<li>Open source! (MIT) (Totally a feature.)</li>
+</ul>
+
+<h1>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h1>
 
 <p><strong>Grease/Tamper/etcmonkey users:</strong> <a href="//repod.github.io/psdle/psdle.user.js">Get the user script</a> then go to the download list.    </p>
@@ -71,6 +89,8 @@ If you get an error involving strict MIME checking, run the URL through somethin
 <li>Custom-make the gh-pages branch page to remove useless links (downloading the zip).</li>
 </ul>
 
+<p>Issues: <a href="//github.com/RePod/psdle/issues">Submit</a> - <a href="//github.com/RePod/psdle/issues/3">PS+</a>.</p>
+
 <h1>
 <a id="potentially-asked-questions" class="anchor" href="#potentially-asked-questions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Potentially Asked Questions</h1>
 
@@ -79,88 +99,9 @@ If you get an error involving strict MIME checking, run the URL through somethin
 
 <p><strong>Yes it is safe, no it is not for phishing account details.</strong><br>
 I put it on GitHub for a reason, feel free to view the <del>horribly effective</del> code yourself and decide.<br>
-If and when I get pull requests I'll let them sizzle and look through them while allowing the "community" to as well.</p>
+If/when I get pull requests I'll let them sit and look through them while allowing the <a href="#" title="What community?">"community"</a> to as well.</p>
 
 <p>If authentication details were left around openly on the download list page I would take my concerns elsewhere.</p>
-
-<h5>
-<a id="does-this-support-ps-titles" class="anchor" href="#does-this-support-ps-titles" aria-hidden="true"><span class="octicon octicon-link"></span></a>Does this support PS+ titles?</h5>
-
-<p>Yes, or tries to, listing them as normal as well as distinguishing them from other entries with a yellow background.</p>
-
-<p>Report any issues <a href="//github.com/RePod/psdle/issues/3">here</a>.</p>
-
-<h5>
-<a id="how-does-the-download-queue-work" class="anchor" href="#how-does-the-download-queue-work" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does the Download Queue work?</h5>
-
-<p>At the time of writing, to add items simply click them on the list to select a system (or all).</p>
-
-<p>To view and remove items from the Download Queue click the "Queue" button in the top-right.</p>
-
-<p>Note adding/remove items may not reflect immediately, this is a work in progress.</p>
-
-<h5>
-<a id="what-difference-does-using-the-apis-make" class="anchor" href="#what-difference-does-using-the-apis-make" aria-hidden="true"><span class="octicon octicon-link"></span></a>What difference does using the APIs make?</h5>
-
-<p>The <strong>Game API</strong> (deep search) accesses individual game information to enhance results (detecting PS1/2 games, demos, etc.).</p>
-
-<p>The <strong>Entitlements API</strong> accesses the user's entitlements (purchases) information to determine PS+ titles.</p>
-
-<p>All API usage is optional, they're used only to enhance the experience </p>
-
-<p>End-users are to be held responsible for problems that arise from using the APIs.<br>
-API usage is currently early in its development so not everything may be detected properly.</p>
-
-<h5>
-<a id="why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3" class="anchor" href="#why-are-ps1-classicsetc-showing-as-psp-and-ps2-classics-as-ps3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why are PS1 classics/etc showing as PSP and PS2 classics as PS3?</h5>
-
-<p>Enable deep search/use API on PSDLE startup.</p>
-
-<h5>
-<a id="why-is-ps4-content-not-correctly-identified-games-as-unknown-etc" class="anchor" href="#why-is-ps4-content-not-correctly-identified-games-as-unknown-etc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is PS4 content not correctly identified? (Games as unknown, etc.)</h5>
-
-<p>A <strong>non-PS4 item</strong> (PS3/P/Vita game, demo, application, avatar, etc) is required to be on the download list, as well as using the <strong>Game API</strong> (deep search).</p>
-
-<p>There was going to be an explanation behind this but nobody would care anyway.</p>
-
-<h5>
-<a id="how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters" class="anchor" href="#how-can-i-exclude-results-that-arent-touched-by-the-system-or-tag-filters" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can I exclude results that aren't touched by the system or tag filters?</h5>
-
-<p>In the search box make a regular expression to match what you want to exclude then attach /d as a mod.</p>
-
-<p>For instance, /Avatar/id will exclude every instance of "Avatar" instead of only showing them. (/i is case-insensitive)</p>
-
-<p>If the box turns red when the search is executed, /d is working as it should.</p>
-
-<h5>
-<a id="why-does-it-take-so-long-to-parse" class="anchor" href="#why-does-it-take-so-long-to-parse" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why does it take so long to parse?</h5>
-
-<p>PSDLE uses a crude method to detect page changes which takes a while, but is definitely faster than it was before. After all pages are parsed it then starts checking the APIs (if enabled) to get more information which also takes time from getting the result to storing the information where it needs to go.</p>
-
-<p>If using the API, PSDLE waits for all requests to finish before proceeding.</p>
-
-<p>This may change in the future.</p>
-
-<h5>
-<a id="why-is-this-so-horrible" class="anchor" href="#why-is-this-so-horrible" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is this so horrible?</h5>
-
-<p>Functionally, PSDLE is complete. If you have suggestions make them known!<br>
-Feel free to fork and submit pull requests.</p>
-
-<h5>
-<a id="why-is-this-so-good" class="anchor" href="#why-is-this-so-good" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is this so good?</h5>
-
-<p>I ask myself that every time I wake up.</p>
-
-<h5>
-<a id="does-this-work-in-any-browsermy-toasters-web-browser" class="anchor" href="#does-this-work-in-any-browsermy-toasters-web-browser" aria-hidden="true"><span class="octicon octicon-link"></span></a>Does this work in any browser/my toaster's web browser?</h5>
-
-<p>Probably, as long as it allows local Javascript execution.</p>
-
-<h5>
-<a id="how-do-i-contribute" class="anchor" href="#how-do-i-contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>How do I contribute?</h5>
-
-<p>Translations, let me have them! See source for format.</p>
 
 <h1>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h1>
